--- a/lessons/templates/base.html
+++ b/lessons/templates/base.html
@@ -29,6 +29,10 @@
 
   <script src="{% static "js/jquery.min.js" %}"></script>
   <script src="{% static "js/bootstrap.min.js" %}"></script>
+  {% block les_js %}
+
+  {% endblock %}
+
 
 </head>
 
