--- a/lessons/templates/kudl/p2l1.html
+++ b/lessons/templates/kudl/p2l1.html
@@ -2,13 +2,118 @@
 {% load staticfiles %}
 
 {% block title %}Часть 2 - Урок 1{% endblock %}
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 {% block les_styles %}
   <link href="{% static "css_les/p2l1.css" %}" rel="stylesheet">
 {% endblock %}
 
 
 {% block content %}
-  Заготовка
+
+  <header> <!-- в header включаем не только верхнее меню, но и второе меню + слайдер -->
+    <div class="menu-top">
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Free Shipping Over $50</a></li>
+              <li><a href="#">Articles</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <span class="flag"><img src="{% static "img/kudl2/flag.jpg" %}" alt=""></span>English <span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#"><span class="flag"><img src="{% static "img/kudl2/flag.jpg" %}" alt=""></span> France</a>
+                  </li>
+                  <li><a href="#">Russian</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Currency: usd <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Currency: eur</a></li>
+                  <li><a href="#">Currency: rub</a></li>
+                </ul>
+              </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Signup</a></li>
+              <li><a href="#" class="btn-red"><span class="glyphicon glyphicon-shopping-cart"></span>shopping cart</a>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div> <!-- /.menu-top -->
+
+    <section class="menu-carousel">
+      <div id="carousel" class="carousel fade" data-ride="carousel">
+        <!-- Indicators -->
+
+        <div class="carousel-indicators-wrap">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+          </ol>
+        </div>  <!-- ./carousel-indicators-wrap -->
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <div class="bgslide" style="background-image: url({% static "img/kudl2/slider.jpg" %});"></div>
+            <div class="carousel-caption">
+              <h1>Women's Apparel</h1>
+              <h3>T-Shirts, Dress Shirts, Tanks, Pants and More...</h3>
+              <a href="#" class="btn-red">Shop Women’s Apparel</a>
+            </div>
+          </div>
+          <div class="item">
+            <div class="bgslide" style="background-image: url({% static "img/kudl2/slider.jpg" %});"></div>
+            <div class="carousel-caption">
+              <h1>Women's Apparel 2</h1>
+              <h3>T-Shirts, Dress Shirts, Tanks, Pants and More...</h3>
+              <a href="#" class="btn-red">Shop Women’s Apparel</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+
+  </header>
+
 {% endblock %}
 
+{% block les_js %}
+  <script src="{% static "js/p2l1.js" %}"></script>
+{% endblock %}
